--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -51,6 +51,11 @@
                             <i class="fas fa-list"></i> Apps
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://sailfishos.wiki/" target="_blank" rel="noopener">
+                            <i class="fas fa-book"></i> Wiki
+                        </a>
+                    </li>
                     {% if current_user.is_authenticated %}
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('dashboard.index') }}">
