--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -20,6 +20,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>{% block title %}SailfishOS App Compatibility{% endblock %}</title>
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="{{ url_for('static', filename='favicon.svg') }}">
+
     <!-- Bootstrap 4.6 CSS (compatible with Firefox ESR 78) -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 
