Change to say its a community projet

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -131,7 +131,7 @@
     <footer class="footer mt-auto py-3 text-light">
         <div class="container">
             <div class="d-flex flex-wrap justify-content-between align-items-center">
-                <span class="text-muted"><i class="fas fa-ship"></i> SailfishOS.app &mdash; Like <a href="https://www.protondb.com/" target="_blank" rel="noopener">ProtonDB</a> but for SailfishOS</span>
+                <span class="text-muted"><i class="fas fa-ship"></i> SailfishOS.app &mdash; A community project, not affiliated with Jolla</span>
                 <span class="text-muted">
                     <a href="https://github.com/SpecSierra/SailfishOS.app" target="_blank" rel="noopener" class="mr-3"><i class="fab fa-github"></i> GitHub</a>
                     v{{ app_version }}
