make app description smaller

--- a/app/templates/frontend/app_detail.html
+++ b/app/templates/frontend/app_detail.html
@@ -45,7 +45,7 @@
                 </div>
 
                 {% if app.android_description %}
-                <p class="lead">{{ app.android_description }}</p>
+                <p class="text-muted small">{{ app.android_description }}</p>
                 {% endif %}
 
                 <hr>
